--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dine</title>
+		<title>Dine-Helping you better understand the millenial consumer</title>
 		<!--<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" itemprop="description" content="With DINE there's no more guessing when it comes to dining out.
 		Simply tell us what you like and we'll turn it into a personalized menu" />
